img, logos and memes

--- a/docs/01/S01.02.pourquoi-docker.md
+++ b/docs/01/S01.02.pourquoi-docker.md
@@ -22,6 +22,8 @@ Et plus bas :
 > Docker est une plateforme open source qui sert à **développer**, **partager**, **livrer** et **executer** des applications
 > pour ne plus jamais entendre : **mais ça marche sur ma machine ?!**
 
+![](./../../img/memes/docker-is-born-meme.jpg)
+
 Donc docker c'est ce qui permet de passer du stade _amateur_ au niveau **professionnel** quel que soit votre domaine (front, back, mobile, data, ML, ...).
 
 ### Sur le plan professionnel
@@ -31,58 +33,64 @@ Quelques réponses à la question : [un développeur doit-il apprendre docker](h
 > As a CTO, docker is the second thing I look for after experience with the core language the team is using. Why? Because any entry level dev can write an app that works on their laptop.
 [...]. My current team uses docker to **replicate the entire stack locally**. We want to reduce the variance from our test env and our prod env.
 
+En français
+> En tant que CTO, Docker est la 2eme chose que je recherche après l'expérience avec le langage principal utilisé par l'équipe. Pourquoi ? Parce que n'importe quel développeur débutant peut écrire une application qui fonctionne sur son ordinateur portable. [...] Mon équipe  utilise Docker pour **répliquer l'intégralité de la stack en local**. Nous voulons réduire les écarts entre notre environnement de test et notre environnement de production.
+
 ou
 > Most definitely, not **polluting** your machine with app-specific setup is a huge **time/headache saver**.
+
+soit
+
+> ne pas polluer sa machine avec des configurations spécifiques à l'application est un énorme gain de temps et d'énergie.
 
 L'enquête [Stack Overflow 2024](https://www.docker.com/blog/docker-stack-overflow-survey-thank-you-2024/):
 
 > found Docker to be the most-admired (78%). Moreover, Docker is the **most-used tool**  by professional developers, with 59% using it in their work.
 
+en français:
+
+> ... Docker est l'outil le plus admiré (78%). ... Docker est l'outil le plus utilisé par les professionnels, avec 59 % d'entre eux l'utilisant dans leur travail.
+
 Donc quand vous êtes en recherche d'emploi, savoir utiliser docker est définitivement un élément qui vous différencie des autres candidats.
 
 En résumé:
 
-Docker first : c'est être vu comme un pro et pas comme un débutant.
+> Docker  : c'est être vu comme un pro et pas comme un débutant.
 
 ## Dans le développement
 
-Docker provides tooling and a platform to manage the lifecycle of your containers:
-
--     Develop your application and its supporting components using containers.
--     The container becomes the unit for distributing and testing your application.
--     When you're ready, deploy your application into your production environment, as a container or an orchestrated service. This works the same whether your production environment is a local data center, a cloud provider, or a hybrid of the two.
+Docker provides tooling and a platform to manage the **lifecycle** of your containers:
 
 Docker, est un outil qui gère vos conteneurs de A à Z :
 
-- On développe l'appli dans des conteneurs.
-- Le conteneur devient l'unité de base pour distribuer et tester l'appli.
-- Quand tout est prêt, on peut déployer l'appli en production, (conteneur simple, soit comme un service orchestré Kubernetes). Ça marche pareil, que ce soit sur l'ordi local, dans le cloud, ou un mix des deux.
+- On **développe** l'appli dans des conteneurs.
+- Le conteneur devient l'unité de base pour **distribuer** et **tester** l'appli.
+- Quand tout est prêt, on peut déployer l'appli en **production**, soit par le biais d'un simple conteneur, de multiples containers ou avec un service d'orchestration comme Docker Swarm ou Kubernetes.
 
-Containers allow a developer to package up an application with all the parts it needs, such as libraries and other dependencies, and ship it all out as one package. In short, Docker containers encapsulate everything required to run an application, ensuring it works seamlessly in any environment.
+Les conteneurs permettent à un développeur
 
-> Les conteneurs permettent à un développeur d'**emballer** une application avec tous les éléments dont elle a besoin, comme les bibliothèques et autres dépendances, et de tout expédier en un seul paquet. En gros, les conteneurs Docker encapsulent tout ce qui est nécessaire pour faire tourner une application, garantissant qu'elle fonctionne sans accroc dans n'importe quel environnement.
+- d'**encapsuler** une application avec tous ses composants (bibliothèques, dépendances),
+- de tout expédier en un seul package.
+
+Et l'application fonctionne dans dans n'importe quel environnement.
 
 ### Scénarios
 
-- Versions multiples d'une application et de tous les composants nécessaires à son execution : librairies, package mais aussi clefs API, mots de passe, fichiers de configurations, etc
-- stacks dans des versions multiples
-- environnements de développement, de test, de staging ou replication de l'environnement de production
-
-- et nécessités de pouvoir faire tourner une application, sur plusieurs machines
-  - autres développeurs
-  - Machine Virtuelle en production
-  - projet open source
-  - etc
+- environnement de dev, test, staging, production
+- mise en production
+- evolution des versions des librairies
+- CI/CD
+- onboarding
+- scalability
+- projets open source
 
 ## Composants Docker
 
+![docker everywhere](./../../img/memes/containers-everywhere.png)
+
 Comment ca marche ? quel est le principe ?
 
-On parle d'image et de containers
-
-Docker objects
-
-When you use Docker, you are creating and using images, containers, networks, volumes, plugins, and other objects. This section is a brief overview of some of those objects.
+On parle d'**images** et de **containers**
 
 ### Images
 
@@ -90,52 +98,86 @@ Que dit la doc? [docs.docker.com/get-started/docker-overview](https://docs.docke
 
 - An image is a read-only template with instructions for creating a Docker container.
 - Often, an image is based on another image, with some additional customization.
-
-et:
-
 - For example, you may build an image which is based on the ubuntu image, but installs the Apache web server and your application, as well as the configuration details needed to make your application run.
 
-Ce qui n'est pas super clair.
+en français
 
-Un image c'est un fichier dont le role est de permettre de run une application, un service.
+- Une image est un modèle (template) en lecture seule avec des instructions pour créer un conteneur Docker.
+- Souvent, une image est basée sur une autre image avec des personnalisations supplémentaires.
+- Par exemple, vous pouvez créer une image basée sur l'image Ubuntu, qui installe le serveur web Apache, votre application et les configurations nécessaires pour la faire fonctionner.
+
+Ce qui n'est pas super super clair.
+
+Un image c'est un fichier dont le rôle est de permettre d'exécuter une application, un service : site web, base de données, API, micro service, ...
 
 Une image contient:
 
-- un OS (linux la plupart du temps)
-- les librairies nécessaires
-- des commandes : clés d'accès, configurations réseau, exécution de programme, etc...
+- un OS (**Linux** la plupart du temps)
+- l'installation des librairies nécessaires
+- de la configuration: clés d'accès, variables d'environnement, configurations réseau
+- l'exécution d'une ou plusieurs commande
 
-ou plus généralement:
+Exemple:
 
-- une image de départ qui peut être un OS
-- des librairies supplémentaires
-- des commandes
+Une image simple
+
+- une image de départ: Ubuntu 22.04
+- une commande: bash
+
+Un site web qui tourne sur Nginx
+
+- une image de départ: Nginx
+- On installe Flask,
+- on ouvre le port 8080
+- puis on lance Nginx et Flask
+
+Une base de données
+
+- on part d'une image de base avec l'OS ubuntu
+- on installe PostgreSQL
+- on crée un volume persistent
+- on ouvre le port 5432
+- on importe credentials d'accès
+- on lance le serveur PostgreSQL
+- on lance le monitoring du serveur en parallèle
+
+donc **l'image**, c'est un fichier qui une fois exécuté va permettre de faire tourner l'application.
+
+On `build` une image.
+
+C'est la même idée de base qu'une machine virtuelle (avec des différences importantes)
 
 ### Containers
 
-Un container est une instance executable de l'image en question.
+Un container est une instance d'exécution de l'image.
 
-> Donc à partir d'une image unique on peut avoir plusieurs containers qui exécute la même image.
-> Ce qui est tout de suite très intéressant pour déployer des applications sur un grand nombre de VM (machines virtuelles) à la fois.
+A partir d'une image unique on peut avoir plusieurs containers qui exécute la même image.
 
-Un peut ```start | stop | delete``` un container. Soit:
-
-- en ligne de commande (terminal, powershell)
-- avec docker desktop
+Ce qui est tout de suite très intéressant pour déployer des applications sur un grand nombre de hosts à la fois.
 
 ![image-containers](./../../img/images-containers.png)
 
+On ```start | stop | delete``` un container.
+
 ### parallèle avec la notion de classe et d'object
 
-Container images seems like a bit class/object concept. Image is like a class or template and then you can create any number of instances of that template and it has OCI Runtime Specification. It’s a definition of the standard container.
+Les images docker et leurs containers associés ressemblent au concept de classe et d'objet.
+Une image est comme une classe à partir de laquelle on instancie des objets en nombre illimité.
 
-#### Isolation
+### Isolation des containers
 
 Un container existe par lui même indépendamment de la machine sur laquelle il tourne.
+
 On dit qu'il est isolé de la machine hôte.
+
 Donc quand on supprime un container, son état (state) de fonctionnement et les données  qui lui sont propres disparaissent avec lui.
 
-Mais on peut attacher ou relier un container a du storage et un réseau pour rendre les données persistantes au delà de la vie du container.
+Mais on peut attacher ou relier un container à du storage et lui donner accès à un réseau pour rendre les données persistantes au delà de la vie du container.
+
+Il est donc possible de faire tourner des containers en parallèle sur sa machine.
+Chaque containers est indépendant des autres et de la machine hôte.
+
+### Du container à l'image
 
 On peut aussi transformer le container en une nouvelle image.
 
@@ -148,9 +190,6 @@ par exemple:
 
 On peut ensuite démarrer un nouveau container à partir de cette nouvelle image.
 
-Il est donc possible de faire tourner des containers en parallèle sur sa machine.
-Chaque containers est indépendant des autres et de la machine hôte.
-
 ### Dockerfile
 
 Plutôt que de toujours devoir partir d'une image simple (OS) qui de la construire instruction par instruction, on utilise un fichier  intitulé ```Dockerfile```
@@ -162,38 +201,59 @@ Plutôt que de toujours devoir partir d'une image simple (OS) qui de la construi
 - le setup réseaux, storage, accès
 - les commandes d'execution
 
-### Mais d'où viennent les images ?
+## Registry: stockage des images
 
-du Docker registry hub
+Une fois construite en local on peut publier l'image sur un registry.
 
 ![Registry, images and containers](./../../img/registry-images-containers.png)
 
-### Histoire
+### Docker hub registry
 
-Eleven years ago, Solomon Hykes walked onto the stage at PyCon 2013 and revealed Docker to the world for the first time. The problem Docker was looking to solve? “Shipping code to the server is hard.”
+**Docker Hub**  [hub.docker.com](https://hub.docker.com/) est le registry officiel de Docker, Inc. C'est une plateforme centralisée de stockage et de partage d'images Docker et offre des repository publics et privés.
 
-Mar 21, 2024
-<https://www.docker.com/blog/docker-11-year-anniversary/>
+1. **Stocker et distribuer des images de conteneurs :** on peut publier des images Docker sur Docker Hub, pour les rendre disponibles pour que d'autres puissent les télécharger et les utiliser.
 
-Ranked #1 “most-wanted” tool/platform by Stack Overflow’s developer community for the past four years
-26 million monthly active IPs accessing 15 million repos on Docker Hub, pulling them 25 billion times per month
-17 million registered developers
+2. **Images officielles :** Docker Hub héberge les **images officielles** des projets open-source les plus important (Ubuntu, NGINX, MySQL, ...). Ces images sont vérifiées par Docker et sont fiables.
 
-La version commerciale de dockers date de 2014. il y a 10 ans. créee par Solomon Hykes
-<https://www.zdnet.com/article/docker-1-0-brings-container-technology-to-the-enterprise/>
+3. **Images publiques :** En plus des images officielles, chacun peut publier ses propres images sur Docker Hub et les mettre à disposition de la communauté.
 
+4. **Builds automatisés :** Docker Hub peut automatiquement créer des images à partir d'un repository git. Ces images sont re-buildées à chaque nouveau commit et sont par conséquent à jour.
+
+En résumé, Docker Hub est le registre de conteneurs le plus grand et le plus utilisé, permettant le partage et la gestion d'images Docker de manière fluide.
+
+### Cloud based registries
+
+Les grandes plateformes cloud offrent toutes des services de registry
+
+- AWS: **Amazon Elastic Container Registry (ECR)**
+- Google: **Google Container Registry (GCR)** et plus récent: **Artifact Registry** (remplace GCR)
+- Azure: **Azure Container Registry (ACR)**
+
+## Histoire de Docker
+
+_Eleven years ago, Solomon Hykes walked onto the stage at PyCon 2013 and revealed Docker to the world for the first time. The problem Docker was looking to solve? “Shipping code to the server is hard”._
 <https://medium.com/datadriveninvestor/docker-f0b8df21f003>
 
-depuis plus de 40 milliards
+> Il y a 11 ans, Solomon Hykes révèle l'existence de Docker lors de PyCon 2013. Le problème que docker essayait de résoudre : livrer du code en production est difficile.
 
-Le premier blog post
-juillet 2013
-<https://www.docker.com/blog/how-to-use-your-own-registry/>
-celui d'apres
-avec le meme
-<https://www.docker.com/blog/docker-can-now-run-within-docker/>
+Le premier blog post date de juillet 2013 <https://www.docker.com/blog/how-to-use-your-own-registry/>
+
+Solomon Hykes crée ensuite la version commerciale de Docker en 2014. Il y a 10 ans.
+<https://www.zdnet.com/article/docker-1-0-brings-container-technology-to-the-enterprise/>
 
 ## Liens et lectures
+
+Docker:
+
+- <https://docker.com>
+- <https://hub.docker.com>
+
+Importance de Docker
+
+- <https://www.docker.com/blog/docker-stack-overflow-survey-thank-you-2024/>):
+- <https://www.reddit.com/r/docker/comments/s18o83/is_it_worth_it_to_invest_time_learning_docker_as/>
+
+Fonctionnement de Docker
 
 - <https://docs.docker.com/get-started/docker-overview/>
 - <https://medium.com/@furkan.turkal/how-does-docker-actually-work-the-hard-way-a-technical-deep-diving-c5b8ea2f0422>
