--- a/docs/01/S01.01.intro.md
+++ b/docs/01/S01.01.intro.md
@@ -5,6 +5,8 @@ Bienvenue
 * Alexis Perrier - [alexis.perrier@ynov.com](mailto:alexis.perrier@ynov.com)
 * Linkedin: [alexisperrier](https://www.linkedin.com/in/alexisperrier/)
 
+![](./../../img/docker-logo.png)
+
 ## Le discord
 
 Connectez-vous au discord dans le channel ynov-docker : [https://discord.gg/yh2cr4UF7y](https://discord.gg/yh2cr4UF7y)
@@ -13,61 +15,80 @@ Connectez-vous au discord dans le channel ynov-docker : [https://discord.gg/yh2c
 
 Tous les supports de cours sont dans le github [https://github.com/SkatAI/ynov-docker](https://github.com/SkatAI/ynov-docker)
 
-## Le Moodle
+## Le moodle
 
 Les supports de cours seront aussi mis à disposition sur le Moodle de Ynov.
 
 ## Le cours
 
-8 Sessions (S01, ... S08) réparties sur 4 journées.
-
-9/10, 10/10, 29/10 et 18 Novembre
+8 Sessions (S01, ... S08) réparties sur 4 journées: 8 et 9 octobre, 29 oct et 18 Novembre.
 
 Chaque session suit le principe
 
-1 sujet par session:
-
+* 1 sujet par session
 * intro et recap de ce que l'on a vu précédemment
 * TD sur le cours précédent
 * Cours sur le sujet de la session
 * (Ticket de sortie)
 
-Le contenu du cours est disponible sur:
-
-* [Discord: channel ynov-docker](https://discord.gg/...)
-* le github : <https://github.com/SkatAI/ynov-docker>
-* et les documents seront mis à disposition sur le moodle de Ynov
+Le but est de vous faire pratiquer le plus possible.
 
 Questions, commentaires à [alexis.perrier@ynov.com](mailto:alexis.perrier@ynov.com) ou via discord.
 
 ## Evaluation
 
-* Les labs seront notés
-* Un projet final en classe lors de la dernière après midi.
+* Les TD comptent pour la note final.
+* Un projet final en classe lors de la dernière après midi ou journée.
 
 La note finale sera composée de 50% (les meilleures notes de TD) + 50% (le projet final)
 
 ## Comment organiser votre travail
 
-Creez un repertoire unique pour le cours
-\ynov-docker
+Creez un répertoire unique pour le cours
 
-dedans
+```bash
+/cours-docker
+```
+
+puis
+
+```bash
+cd ./cours-docker
+```
+
+* dans le repertoire `/cours-docker` créez des folders pour
+  * les pdf, `.pdf`
+  * votre code: `./src`
+  * la data: `./data`
+  * Autres folders dont vous avez besoin
+
+puis
+
 * clonez la repo
-* creez des folders pour
-* les pdf,
-* votre code
-* la data
 
-Ca doit ressembler à ça
+```bash
+git clone git@github.com:SkatAI/ynov-docker.git
+```
 
+Cela va créer un sous répertoire `cours-docker/ynov-docker`
+
+Au final la structure est:
+
+![cours docker structure](./../../img/cours-docker-tree-structure.png)
 
 ### Le terminal
-On travaille dans le terminal a 95%
-- mac: iTerm
-- Windows: powershell admin ou wsl
 
-## Scope du cours
+On travaille dans le terminal à 95%
+
+* mac: iTerm
+* Windows: WSL
+
+## Pré-requis
+
+* confortable avec la ligne de commande
+* savoir ajouter un path au PATH
+
+## Scope du cours (Ynov)
 
 * Connaître les caractéristiques d'un conteneur et découvrir Docker
 * Installer et utiliser Docker
@@ -78,49 +99,23 @@ On travaille dans le terminal a 95%
 
 A ceci, nous ajouterons:
 
-* Intro à linux
+* Intro à Linux
 
 et si nous avons le temps
 
-* déployer une app dockerisée sur Azure
+* déployer une application dockerisée sur Azure
 
-## Buts
+> S'il y a des sujets que vous souhaitez aborder, n'hésitez pas à me le dire. (liés à Docker)
 
-* Qu'utiliser Docker dans vos projets devienne une évidence et un réflexe.
+## But du cours
+
+* Qu'utiliser **Docker** dans vos projets devienne une évidence et un réflexe.
 
 ## Sondage rapide
 
 Mais tout d'abord pour mieux vous connaitre, quelques questions
 
-todo : lien vers google form
+* aucune réponse n'est obligatoire
+* il n'y a pas de mauvaise réponse
 
-### laptop
-
-* mac, linux, windows
-
-### Niveau
-
-* votre experience avec Docker ? (en quelques mots, vous l'utilisez au quotidien, vous l'avez utilisé dans es projets, aucune idee de ce que c'est )
-
-* est ce que Docker Desktop est installé sur votre machine ?
-* Savez vous accèder a la ligne de commande dans un terminal,  powershell, WSL, ..
-* Quels vos languages de programmation  préferés ?
-* test en python
-
-### Stack
-Vous travaillez avec quel stack, si vous etes en alternance 
-
-### Aspirations
-
-Qu'est ce que vous voulez apprendre dans ce cours ?
-
-Qu'est ce que vous voulez faire professionnellement ?
-
-Une techno particuliere que vous souhaitez maitriser ? en dehors de Docker ?
-### LLM
-
-Vous utilisez chatGPT ou equivalent
-
-* tous les jours et vous avez un abonnement
-* souvent et sans abonnement
-* rarement ou jamais
+<https://forms.gle/44jJWQHfEwGGfhfo8>
