Intro to docker

--- a/docs/01/S01.03.install.md
+++ b/docs/01/S01.03.install.md
@@ -1,13 +1,13 @@
 # Installer docker
 
-But du document: installer Docker Desktop
-verifier l'install
-Hello worl
+But du document:
+
+- installer Docker Desktop
+- verifier l'install
 
 Commençons par le plus important
 
-
-### Installer Docker sur vos machines
+## Installer Docker sur vos machines
 
 Le plus simple est d'installer l'application **Docker Desktop** qui offre une interface (UI) simple et qui installera tout ce qui est nécessaire pour vous permettre d'exécuter aussi ```docker``` en ligne de commande.
 
@@ -15,15 +15,23 @@ Pour cela, allez sur <https://docs.docker.com/desktop/>  et choisissez la versio
 
 ## Windows
 
+### Installer WSL 2
+
+Sur windows, il est fortement conseillé d'installer WSL 2 avec Ubuntu comme distribution Linux.
+
+<https://learn.microsoft.com/fr-fr/windows/wsl/install>
+
+### Ensuite Docker Desktop
+
 <https://docs.docker.com/desktop/install/windows-install/>
 
 ## Mac
 
 <https://docs.docker.com/desktop/install/mac-install/>
 
-## Verifier l'installation
+## Vérifier l'installation de Docker
 
-En ligne de commande: powershell ou mac
+En ligne de commande:
 
 ```bash
 docker run -d -p 8080:80 docker/welcome-to-docker
@@ -41,6 +49,6 @@ Vous devriez voir
 
 ## Conclusion
 
-Si vous avez pu faire tourner  le container welcome to docker en ligne de commande, bravo!
+Si vous avez pu faire tourner le container welcome to docker en ligne de commande, bravo!
 
 On va maintenant explorer ce qui la commande a fait.
