--- a/docs/01/S01.04.premiers-pas-docker.md
+++ b/docs/01/S01.04.premiers-pas-docker.md
@@ -1,13 +1,13 @@
-# Decriptons le hello world
+# Décryptons le hello world
 
 Dans ce document:
 
-- on analyse les consequences de la commande ```docker run -d -p 8080:80 docker/welcome-to-docker```
-- ce qu'est un hash string et une hash fonction
+- on analyse les conséquences de la commande ```docker run -d -p 8080:80 docker/welcome-to-docker```
+- hash string et une hash fonction
 
-## Ce que ```docker run``` a fait
+## Que fait ```docker run``` ?
 
-Si on revient sur la sortie dans le terminal de la commande:
+Revennons sur la sortie dans le terminal de la commande:
 
 ```bash
 docker run -d -p 8080:80 docker/welcome-to-docker
@@ -34,51 +34,44 @@ e6780a6285cf019b4637ca1bd99f612911a49e6ba7e9069cec35f79793bfae23
 
 - La première ligne montre que docker va essayer de récupérer (pull) l'image ```docker/welcome-to-docker``` localement et qu'il ne la trouve pas.
 - Donc il va la récupérer a partir d'un repository en ligne (**docker hub**)
-- Il recapture ensuite pas moins de 8 elements.
-  - Les strings de type _740091335c74_ sont les **hash** liés aux elements qui sont récupérés.
-- Et après il confirme que l'image la plus récente a bien été récupérée.
+- Il récupère ensuite pas moins de 8 elements.
+  - Les strings de type _740091335c74_ sont les **hash** liés aux éléments récupérés.
+- `Status:...` Il confirme que l'image la plus récente a bien été récupérée.
 - Et il donne 2 longs hash d'identification:
-  - le premier: ```Digest: sha256:eedaff45e3c78538087...``` correspond au **manifest** de l'image. (Le manifeste de l'image est une description des composants de l'image).
+  - le premier: ```Digest: sha256:eedaff45e3c78538087...``` correspond au **manifest** de l'image (fichier JSON auto généré qui décrit les composants de l'image).
   - le deuxième est le hash d'identification du container
 
-pas mal d'éléments et beaucoup de hash strings!
+Donc pas mal de chose et surtout beaucoup de hash strings!
 
-### Image manifest
+## HASH string et fonctions de Hashing
 
-Puisqu'on le mentionne autant en parler maintenant
+Une fonction de hashing est un algorithme qui prends un chaîne de caractères en entrée et qui produit une chaîne de caractère appelée HASH de taille déterminée.
 
-An image manifest is a JSON file that describes the contents and configuration of a Docker image.
-When it's used: It's created when an image is built and used when pulling or pushing images to/from a registry.
+![Hash Function](./../../img/hash-function.png)
 
-It includes:
+La [fonction de hashing](https://fr.wikipedia.org/wiki/Fonction_de_hachage) (hachage en français :( ) a des propriétés très spécifiques:
 
-- References to the image **layers** (composants)
-- Image configuration details
-- Metadata about the image (like creation time, architecture, OS)
+- **Déterministe** : la même entrée produit toujours la même sortie
+- **Rapide** : le calcul du HASH est super rapide pour pouvoir être appliqué à des volumes importants de données.
+- **Distribution uniforme** : (tous les symboles sont utilisés avec la même fréquence)
+- **Effet d'avalanche** : un petit changement dans le contenu en entrée change fortement le HASH en sortie.
 
-Format: It's a JSON file, not typically meant for direct human editing.
-Location: It's stored within the image itself and in Docker registries.
+Mais surtout
 
-## Qu'est ce qu'un hash string
-
-C'est une chaine de caractères qui est un **identifiant unique** d'un contenu binaire (texte, image, fichier executable, ...) ou d'un fichier.
-
-- mot de passe, email, clef API
-- images, fichiers executables
-- code, paragraphs, livres, etc ...
-
-Il existent de multiples fonctions Hash qui diffèrent par leur qualité: SHA256, MD5, ...
-
-### propriétés
-
-- unicité: la probabilité pour que 2 textes différents ait le même hash (risque de collision) est de 1 sur 3.4 x 10^38.
+- **unicité**: la probabilité pour que 2 textes différents ait le même hash (risque de collision) est de 1 sur 3.4 x 10^38.
 Donc si on peut générer  1 Milliard de hashes par second, on aurait 50% de chance d'avoir une collision en 10^19 années. Par comparaison l'âge de l'univers est de 1.38×10^10!
 
-- un petit changement dans le contenu original produit un grand changement dans le hash string
+- **transformation à sens unique** : il est impossible de retrouver le contenu original a partir du simple hash! parfait pour stocker les mots de passe de façon sécurisée
 
-- il est impossible de retrouver le contenu original a partir du simple hash! => mot de passe
+Les HASH strings sont utilisées dans de nombreux domaines
 
-Différents algorithmes de hash
+1. Structures de données : Tables de hachage pour une recherche, insertion et suppression de données rapides.
+2. Cryptographie : Stockage des mots de passe : Stocker les mots de passe de manière sécurisée en les hachant.
+3. Intégrité des données : Sommes de contrôle : Détecter les modifications accidentelles des données lors de la transmission ou du stockage.
+4. Mise en cache : Utiliser des hachages comme clés pour stocker et récupérer des données en cache.
+5. Technologie blockchain : Preuve de travail : Fondamentale pour de nombreux algorithmes de minage de cryptomonnaies.
+
+Il existent de multiples fonctions Hash qui diffèrent par leur qualité: SHA256, MD5, ...
 
 | Nom       | Output Size (bits) | Speed           | Security     | Common Use Cases                      |
 |------------|:------------------:|-----------------|--------------|---------------------------------------|
@@ -94,30 +87,24 @@ Différents algorithmes de hash
 
 Donc en résumé le **hash string** est un **identifiant universellement unique** d'un contenu, fichier, texte etc...
 
+Il est impossible de retrouver le contenu original à partir de son HASH string
+
 ## De retour à Docker
 
-On donc a les elements suivants
-
-- image : docker/welcome-to-docker
-- container
-- manifest
-- docker hub
-
-et la commande
+La commande
 
 ```bash
 docker run -d -p 8080:80 docker/welcome-to-docker
 ```
 
-qui se décompose de la façon suivante:
+se décompose de la façon suivante:
 
 - ```docker run``` : executer une image ou un container
-- ```-d``` : mode detaché (le terminal revient disponible après )
-- ```-p 8080:80``` :  un mapping de port: celui interne au container: 80  qui est lié au port externe 8080. C'est sur ce port **8080** qu'on accède au service offert par l''image via l'url ```http://localhost:**8080**```
-- enfin le nom de l'image ```docker/welcome-to-docker```
-  - notez que docker essaie de trouver non pas ```docker/welcome-to-docker``` mais ```docker/welcome-to-docker:**latest**```. ici **latest** est un tag de version. par defaut pour un nom d'image donné, docker va chercher la version la plus recente: **latest**.
+- ```-d``` : mode détaché (le terminal redevient disponible après )
+- ```-p 8080:80``` :  un mapping de port: celui interne au container: 80  qui est ainsi lié au port externe 8080. C'est sur ce port **8080** qu'on accède au service offert par l'image via l'url ```http://localhost:**8080**```
+- Le nom de l'image ```docker/welcome-to-docker```
 
-
+notez que docker essaie de trouver non pas ```docker/welcome-to-docker``` mais ```docker/welcome-to-docker:latest```. **latest** est un tag de version. Par défaut pour un nom d'image donné, docker va chercher la version la plus récente qui est taggé  par le mot **latest**.
 
 ## CLI
 
@@ -135,10 +122,11 @@ on retrouve
 
 - le nom de l'image: docker/welcome-to-docker
 - le tag: latest
-- l'image ID. Ici le hash correspond au fichier executable integrale de l'image (pas son manifeste)
-- la date de creation et sa taille
+- l'image ID. Ici le hash correspond au fichier executable intégrale de l'image (pas son manifeste)
+- la date de création de l'image
+- sa taille
 
-Donc a retenir: ```docker images``` pour lister les images
+Donc à retenir: ```docker images``` pour lister les images
 
 ### docker ps
 
@@ -146,22 +134,31 @@ La commande pour lister les containers est : ```docker ps```. (```ps``` veut dir
 
 ```bash
 > docker ps
-CONTAINER ID   IMAGE                      COMMAND                  CREATED      PORTS                  NAMES
-e6780a6285cf   docker/welcome-to-docker   "/docker-entrypoint.…"   ...          0.0.0.0:8080->80/tcp   hungry_snyder
+CONTAINER ID   IMAGE                      COMMAND                  CREATED
+e6780a6285cf   docker/welcome-to-docker   "/docker-entrypoint.…"   ...
+
+    PORTS                  NAMES
+    0.0.0.0:8080->80/tcp   hungry_snyder
 ```
 
-- ici le hash _e6780a6285cf_ tient lieu d'ID du container. c'est une version abrégée du hash string de la derniere ligne de ```docker run```: _e6780a6285cf019b4637ca1bd99f612911a49e6ba7e9069cec35f79793bfae23_
-- un extrait de la ligne de commande qui a ete executé une fois le container lancé. C'est ce qui a parmit d'acceder a une page sur localhost
+- ici le hash _e6780a6285cf_ tient lieu d'ID du container. C'est une version abrégée du hash string de la dernière ligne de ```docker run```: _e6780a6285cf019b4637ca1bd99f612911a49e6ba7e9069cec35f79793bfae23_
+- un extrait de la ligne de commande qui a été executé une fois le container lancé. C'est ce qui a parmit d'acceder a une page sur localhost
 - On trouve aussi le mapping entre les ports: externe -> interne : ```0.0.0.0:8080->80/tcp```
-- enfin un nom aleatoire qui a ete donné au container par docker. ```hungry_snyder```
+- enfin un nom aléatoire qui a été assigné au container par docker. ```hungry_snyder```
 
-Donc à retenir: ```docker ps``` pour lister les containers (en cours d'execution)
+Donc à retenir: ```docker ps``` pour lister les containers (en cours d'éxécution).
 
-## et docker desktop dans tout ca ?
+Pour lister tout les containers meme ceux arretés, on ajoute `-all`
 
-La ligne de commande c'est super mais on a aussi Docker Desktop
+```bash
+docker ps -a
+```
 
-On y retrouve les informations données par ```docker images```
+## et docker desktop dans tout ça ?
+
+La ligne de commande c'est super mais on a aussi **Docker Desktop**
+
+On y retrouve bien les informations données par ```docker images```
 
 ![](./../../img/docker-desktop-images.png)
 
@@ -171,6 +168,17 @@ et les éléments données par ```docker ps``` pour le container.
 
 Il y a une correspondance directe entre l'appli Docker Desktop et docker en ligne de commande.
 
-Dans la suite on utilisera la ligne de commande le plus possible mais ddocker desktop est utile pour avoir une vue d'ensemble.
+Dans la suite on utilisera la ligne de commande le plus possible mais docker desktop est utile pour avoir une vue d'ensemble.
 
+## Conclusion
 
+A ce stade vous devriez:
+
+- comprendre que docker va changer votre vie
+- avoir installé Docker Desktop, WSL
+- avoir exécuté le container  hello world a partir de l'image ... hello world
+- savoir gérer les containers (ps, start, stop) et les images en ligne de commande
+- retrouver les information d'un container ou d'une image dans Docker Desktop
+- comprendre la différence entre image et containers
+
+Dans la prochaine session, nous attaquons Linux et nous créons une premiere image pour faire tourner un serveur web.
