Linux and docker

--- a/docs/02/S02.01.intro.md
+++ b/docs/02/S02.01.intro.md
@@ -6,29 +6,32 @@ On a vu les choses suivantes
 
 - installer docker desktop
 - différence entre containers et images
-- quelques commandes dans le terminal
+- quelques commandes `docker` dans le terminal
 - les hash function et hash strings
 
 ## Cette session
 
-on va plonger dans le monde de Linux.
+On va plonger dans le monde de Linux.
 
 Pourquoi ?
 
 - Parce que Docker est construit sur linux
-- Les 2 tiers ou plus des serveurs web sont du Linux 
+- Les 2 tiers ou plus des serveurs web sont du Linux
 - La majorité des images docker sont construites sur une image de base linux
 
-Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian
+Il y a plus de 600 distributions (Distro) Linux active. Parmi celles ci Ubuntu compte pour 34%, suivi par Debian
 
+Donc Linux c'est
 
-Donc Linux c'est 
 - internet
+- les serveurs d'entreprise
+- chatGPT et toute l'IA et le machine learning et la science et Tesla, et le spatial et ...
 - les mobiles (android est du linux)
-- la science : NASA, CERN etc 
+- la science : NASA, CERN etc
 
 au programme
-- faire tourner un container linux simple avec des commmandes
-- un tuto rapide sur linux
-- des exercices
 
+- faire tourner un container linux simple avec des commandes
+- publier une image sur Docker Hub
+- un tuto sur linux
+- des exercices
