--- a/docs/02/S02.02.docker-linux.md
+++ b/docs/02/S02.02.docker-linux.md
@@ -2,14 +2,14 @@
 
 Dans ce document
 
-- lancer un container avec une distribution Ubuntu ou Alpine
+- lancer un container avec une distribution Ubuntu
 - Linux 101
 
 ## Linux Alpine
 
 Linux existe en beaucoup de versions. La plus commune est Ubuntu.
 
-Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian. 
+Il y a plus de 600 distro Linux active avec Ubuntu qui compte pour 34%, suivi par Debian.
 
 On va utiliser la plus classique, Ubuntu.
 
@@ -25,22 +25,22 @@ Qu'observe t on ?
 
 Docker:
 
-- ne trouve pas l'image de Ubuntu locallement, il va donc la recupèrer sur un repository
+- ne trouve pas l'image de Ubuntu localement, il va donc la récupérer sur un repository Docker Hub
 - Il crée un container
 - le démarre et execute: /bin/bash
 
-Si tout fonctionne bien 
+Si tout fonctionne bien
 on voit le prompt par défaut sur une distribution Ubuntu:
 
 ```bash
 root@45f1bbf4d38d:/#
 ```
+
 Le prompt est de la forme user@containerid:<current working directory>#
 
-Notez que le user ici est **root**. 
+Notez que le user ici est **root**.
 
-
-Verifions la version de l'OS avec  ```lsb_release``` 
+Verifions la version de l'OS avec  ```lsb_release```
 
 ```bash
 # On doit d'abord installer lsb-release
@@ -59,7 +59,7 @@ Release: 24.04
 Codename: noble
 ```
 
-On a donc installé la version 24.04 de Ubuntu. 
+On a donc installé la version 24.04 de Ubuntu.
 Par défaut docker va recuperer la derniere version d'une image (tag: latest)
 
 Pour sortir du container
@@ -80,9 +80,10 @@ CONTAINER ID   IMAGE              COMMAND                  CREATED        STATUS
 Le status est : **Exited (0) 2 seconds ago**
 
 On peut rédemarer le container avec la commande
-```bash 
+
+```bash
 docker start 45f1bbf4d38d
-``` 
+```
 
 le STATUS devient: **Up 2 seconds**.
 
@@ -94,27 +95,27 @@ docker attach 45f1bbf4d38d
 
 On est à nouveau dans la session Ubuntu
 
-
 ### Docker Desktop
+
 Vous pouvez acceder au container dans **Docker Desktop**
 Cliquez sur le nom du container et le tab terminal
 
 ![](./../../img/docker-desktop-terminal.png)
-
 
 ### Les flags -i et -t
 
 On a utilisé 2 flags ```-i -t```
 
 Le help donne les infos
+
 ```bash
 docker run --help
 ```
 
-* ```-t, --tty: Allocate a pseudo-TTY```
+- ```-t, --tty: Allocate a pseudo-TTY```
 le flag `-t` ou `--tty` simule un **terminal interactif** (`tty`) dans le conteneur.
-* ```  -i, --interactive: Keep STDIN open even if not attached```
-Le flag `-i` (ou `--interactive`) force Docker à garder le **STDIN** (Standard Input) ouvert 
+- ```-i, --interactive: Keep STDIN open even if not attached```
+Le flag `-i` (ou `--interactive`) force Docker à garder le **STDIN** (Standard Input) ouvert
 même quand le conteneur n'est pas attaché à un **terminal interactif**.
 
 Les 2 flags sont souvent utilisés ensemble.
@@ -124,25 +125,23 @@ Si on oublie l'un ou l'autre des 2 flags
 ```bash
 docker run ubuntu /bin/bash
 ```
-Le container est executé mais on y a pas acces dans le même terminal. 
-(on peut passer par Docker Desktop) 
 
-* avec seulement -i 
+Le container est executé mais on y a pas acces dans le même terminal.
+(on peut passer par Docker Desktop)
+
+- avec seulement -i
 le terminal ne redonne pas la main
 
-* avec seulement -t: le terminal reste accessible avec le prompt de ubuntu
+- avec seulement -t: le terminal reste accessible avec le prompt de ubuntu
 
 [TODO] Pourquoi on peut seulement utiliser -t
 
-
-
 Une fois dans la session ubuntu:
 
-* `pwd` donne le path du working directory. le directory courant
-* `ls` liste les directlry et ficheirs. Essayez aussi `ls -al` et ```ll```
+- `pwd` donne le path du working directory. le directory courant
+- `ls` liste les directlry et ficheirs. Essayez aussi `ls -al` et ```ll```
 
 ## Le mode detached
-
 
 Detached mode (-d flag):
 
@@ -150,16 +149,11 @@ The container runs in the background
 You get your terminal prompt back immediately
 Output from the container isn't displayed in your current terminal
 
-
 Foreground mode (default, without -d):
 
 The container runs in the foreground
 Your terminal is attached to the container's standard input, output, and error
 You see the output in real-time, but your terminal is occupied
-
-
-
-
 
 ### executer une commande sur un container qui tourne
 
@@ -175,23 +169,20 @@ par exemple
 docker run ubuntu /bin/bash -c pwd
 ```
 
-ou 
+ou
+
 ```bash
 docker run ubuntu /bin/bash -c ls
 ```
 
 ### En résumé
 
-* Il est facile de lancer un container ubuntu avec docker run
-* et d'acceder au terminal interne du container soit avec desktop, soit avec les flags `-it`
-* `docker <command> --help` permet d'avoir la liste des flags que l'on peut utiliser pour la commande
-* les commandes suivantes seront utiles
-  * docker run -it 
-  * docker start | stop
-  * docker attach
-  * docker ps | docker ps -a
-  * docker images
-
-
-
-
+- Il est facile de lancer un container ubuntu avec docker run
+- et d'acceder au terminal interne du container soit avec desktop, soit avec les flags `-it`
+- `docker <command> --help` permet d'avoir la liste des flags que l'on peut utiliser pour la commande
+- les commandes suivantes seront utiles
+  - docker run -it
+  - docker start | stop
+  - docker attach
+  - docker ps | docker ps -a
+  - docker images
